--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "d3": "^7.8.2",
     "datamaps": "^0.5.9",
+    "eslint-config-react-app": "^7.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
